--- a/Comfy/color.ini
+++ b/Comfy/color.ini
@@ -57,7 +57,7 @@ radio-btn-active   = 1DB954
 [Matugen]
 text               = FFFFFF
 subtext            = B3B3B3
-main               = 11140e
+main               = 16130b
 main-elevated      = 242424
 main-transition    = 000000
 highlight          = 1A1A1A
