--- a/Comfy/color.ini
+++ b/Comfy/color.ini
@@ -76,7 +76,7 @@ notification-error = E22134
 misc               = 7F7F7F
 play-button        = 1DB954
 play-button-active = 1DB954
-progress-fg        = 1DB954
+progress-fg        = FBB0D8
 progress-bg        = 636363
 heart              = 1DB954
 pagelink-active    = 333333
